--- a/virtual Pet/virtualPet.css
+++ b/virtual Pet/virtualPet.css
@@ -114,3 +114,6 @@ h1 {
     color: white;
     background-color:rgb(144, 10, 26);
 }
+#reset-button:hover{
+    background-color:rgb(255, 0, 30);
+}
