--- a/super-mall/src/App.css
+++ b/super-mall/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+.go-back-button {
+  margin-top: 30px;
+  padding: 10px;
+  background-color: #6c757d;
+  border: none;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  display: block;
+  width: 100%;
+}
+
+.go-back-button:hover {
+  background-color: #5a6268;
+}
